# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1758.2.199 2011/12/02 15:26:54 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.12 ????-??-??
 - 2011-12-02 Fixed bug#7442 - Dashboard permission check for multiple Groups only
    tests first group.
 - 2011-11-29 Fixed bug#7719 - Agent login page does not offer user to save password
    with Firefox browser.
 - 2011-11-30 Fixed bug#6715 - Setting CustomerID with otrs.AddCustomerUser.pl.
 - 2011-11-28 Updated CPAN module Apache::DBI to version 1.11.
 - 2011-11-23 Fixed bug#7930 - Depreciation warnings in error log when running OTRS on
    Perl 5.14.
 - 2011-11-21 Fixed bug#3804 - Stats in Bar or Pie chart formats don't display non-
    ascii characters correctly.
 - 2011-11-21 Use the secure attribute to restrict coookies to HTTPS if it is used.
 - 2011-11-21 Fixed bug#7909 - Errors should be logged in web server error log only.
 - 2011-11-17 Fixed bug#7896 - Inline images are broken in ticket answers.
 - 2011-11-17 Fixed bug#5782 - Skipped GenericAgent cron executions because of
    timing issues.
 - 2011-11-17 Fixed bug#7674 - Pagination in dashboard appears even with one page of
    results.
 - 2011-11-16 Fixed bug#7903 - Improve MarkTicketsAsSeen for use with large amounts
    of tickets.
 - 2011-11-15 Fixed bug#7901 - Package Manager does not clear the cache.
 - 2011-11-15 Fixed bug#7120 - Inline images from Lotus Notes do not show in
    AgentTicketCompose interface.
 - 2011-11-14 Fixed bug#7526 - OTRS Ticket Search not working with ( or ).
 - 2011-11-10 Fixed bug#7879 - Ticket forward not working if content-id exists.
 - 2011-11-07 Fixed bug#7887 - Type based ACLs do not match if Type (Name) is sent.